Better fix for source title overflow. Now layout is divided into rows

--- a/data/css/content.css
+++ b/data/css/content.css
@@ -7,7 +7,7 @@
 }
 
 .content-wrapper {
-    margin: 15px 0 15px 0;
+    margin: 5px 0px -15px 0;
 }
 
 .item-container {
